# Call-Break-Using-CPP

./: .gitignore  CMakeLists.txt  MyGame  README.md  cmake.txt  constructer.cpp  constructor.cpp  font.cpp  font.hpp  human.cpp  human.hpp  main.cpp  mute.cpp  mute.hpp  problem1.cpp  renderer.h  score.cpp  score.h  total.cpp
Cpp_folder/: Homedesign.cpp
Header folder/: Homedesign.h
UI DESIGN/: Description.md
src/: CardShuffle.cpp  CardShuffle.h  Homedesign.cpp  Homedesign.h  Renderer.cpp  Renderer.h  RendererInterface.cpp  RendererInterface.h  bid_screen.cpp  bid_screen.h  card.cpp  entities.cpp  entities.h  font.cpp  human.cpp  human.h  human.hpp  main.cpp  mute.cpp  totalscore.cpp
src/Backend/Implementation/: GameManager.cpp  RoundManager.cpp  TimeManager.cpp  choosebid.cpp  entities.cpp  gamemanager.cpp  get_cardindex.cpp  score.cpp  timemanager.cpp  validate move.cpp
src/Backend/headerfiles/: GameManager.h  RoundManager.h  TimeManager.h  entities.h  gamemanager.h  timemanager.h
src/Frontend/: CardShuffler.cpp  CardShuffler.h  HandleMusic.cpp  Homedesign.cpp  Homedesign.h  RendererInterface.cpp  bid_screen.cpp  shuffling.cpp  shuffling.h  text.h
src/Frontend/Implementation/: CardShuffler.cpp  Dealing_Cards.cpp  HandleMusic.cpp  Homedesign.cpp  RendererInterface.cpp  bid_screen.cpp  score.cpp  shuffling.cpp
src/Frontend/headerfiles/: Bid_Screen.h  Dealing_Cards.h  HandleMusic.h  Homedesign.h  RendererInterface.h  Shuffling.h  score.h
